package Unit;

public enum EnemyIntentType {
    ATTACK,BLOCK
//    ,STRATEGIC_DEBUFF,STRATEGIC_BUFF
//    ,AGGRESSIVE_DEBUFF, AGGRESSIVE_DEFENSE, AGGRESSIVE_BUFF
//    ,DEFENSIVE_BUFF,DEFENSIVE_DEBUFF
//    ,COWARDLY,SLEEPING,STUNNED,UNKNOWN
}