package logic.card;

public enum CardType {
    ATTACK,SKILL,POWER

}
