package logic.card;

public enum Rarity {
    COMMON,UNCOMMON,RARE
}
